# Nucleus

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  pull_image.py
.github/workflows/: ci.yml  release.yml
images/ubuntu/etc/: ld.so.cache
images/ubuntu/usr/lib/apt/: apt-helper
images/ubuntu/usr/lib/apt/methods/: cdrom  copy  file  ftp  gpgv  http  mirror  rred  rsh  store
images/ubuntu/usr/lib/apt/solvers/: dump
images/ubuntu/usr/sbin/: chroot  iconvconfig  ldconfig.real  zic
images/ubuntu/var/cache/ldconfig/: aux-cache
images/ubuntu/var/lib/dpkg/: status
images/ubuntu/var/lib/dpkg/info/: apt.md5sums  coreutils.md5sums  dpkg.md5sums  libapt-pkg6.0:amd64.md5sums  libapt-pkg6.0:amd64.symbols  libc-bin.md5sums  libc6:amd64.md5sums  libc6:amd64.symbols  libgnutls30:amd64.md5sums  libssl3:amd64.md5sums
images/ubuntu/var/log/apt/: eipp.log.xz
src/: args.rs  container.rs  image.rs  main.rs  orchestrator.rs  state.rs  stats.rs  utils.rs
tests/: integration_tests.rs
