[package]
name = "Nucleus"
version = "0.1.1"
edition = "2024"
authors = ["Sumant"]
description = "A high-performance, minimalist container engine written in Rust."
repository = "https://github.com/sumant1122/Nucleus"
keywords = ["containers", "rust", "linux", "namespaces", "cgroups"]
categories = ["virtualization", "os", "command-line-utilities"]
license = "MIT OR Apache-2.0"

[dependencies]
# We split 'unistd' into 'fs' (for chroot/chdir) and 'process' (for execvp)
nix = { version = "0.27.1", features = ["sched", "mount", "hostname", "process", "fs", "user", "term", "signal"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
caps = "0.5"
libseccomp = "0.3.0"
libc = "0.2"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
